Fixing some waybar module gaps

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -73,7 +73,7 @@ button:hover {
   border-bottom: 2px solid #ffffff;
   border-top: 2px solid #ffffff;
   color: #ffffff;
-  padding: 0px 10px 0px 10px;
+  padding: 0px 2px 0px 10px;
   background-color: #000000;
 }
 
